# cvwidgets

./: CMakeLists.txt  LICENSE  README.md
cvio/: CMakeLists.txt  abstractimageprovider.h  cvimageviewer.cpp  cvmatprovider.cpp  cvmatprovider.h  genericimageviewer.h  h5types.cpp  hdf5internals.cpp  hdf5internals.h  hdf5wrapper.cpp  hdf5wrapper.h  imagetablemodel.cpp  infodialog.cpp  infodialog.h  infodialog.ui  simplehistogram.cpp  simplehistogram.h  simpleimageviewer.cpp  simpleimageviewer.h
cvwidgets/: CMakeLists.txt  abstractimageprovider.h  cvmatprovider.cpp  cvsimpleviewer.h  cvwidgets.pro  cvwidgets_config.h  imagetablemodel.cpp  imagetablemodel.h  infodialog.h  infodialog.ui
cvwidgets_designerplugin/: CMakeLists.txt  cvimageviewerplugin.h  cvsimpleviewerplugin.h  cvwidgetsset.cpp  cvwidgetsset.h
cvwidgets_example/: CMakeLists.txt  cvwidgets_example.pro
designerplugin/: CMakeLists.txt  cvimageviewerplugin.cpp  cvsimpleviewerplugin.cpp  cvwidget_designerplugin.pro  cvwidgetsset.cpp  cvwidgetsset.h  simplehistogramplugin.cpp  simplehistogramplugin.h
example/: CMakeLists.txt  main.cpp
